--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ Flask-SQLAlchemy = "^2.4.4"
 loguru = "^0.5.3"
 webargs = "^7.0.1"
 marshmallow = "^3.10.0"
+Flask-Migrate = "^2.7.0"
 
 [tool.poetry.dev-dependencies]
 wemake-python-styleguide = "^0.15.2"
