--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ loguru = "^0.5.3"
 webargs = "^7.0.1"
 marshmallow = "^3.10.0"
 Flask-Migrate = "^2.7.0"
+psycopg2-binary = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
 wemake-python-styleguide = "^0.15.2"
