--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ license = "MIT"
 python = "^3.8"
 
 Flask = "^1.1.2"
-Flask-RESTful = "^0.3.8"
+flask-restx = "^0.2.0"
 flask-apispec = "^0.11.0"
 Flask-SQLAlchemy = "^2.4.4"
 
