--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ marshmallow = "^3.10.0"
 Flask-Migrate = "^2.7.0"
 psycopg2-binary = "^2.8.6"
 python-slugify = "^4.0.1"
+Flask-Admin = "^1.5.7"
 
 [tool.poetry.dev-dependencies]
 wemake-python-styleguide = "^0.15.2"
