--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ Flask-Migrate = "^2.7.0"
 psycopg2-binary = "^2.8.6"
 python-slugify = "^4.0.1"
 Flask-Admin = "^1.5.7"
+Jinja2 = "^2.11.3"
 
 [tool.poetry.dev-dependencies]
 wemake-python-styleguide = "^0.15.2"
