build(deps): add sqlalchemy-utils

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ marshmallow = "^3.10.0"
 Flask-Migrate = "^2.7.0"
 psycopg2-binary = "^2.8.6"
 python-slugify = "^4.0.1"
+SQLAlchemy-Utils = "^0.36.8"
 
 [tool.poetry.dev-dependencies]
 wemake-python-styleguide = "^0.15.2"
