--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ flask-restx = "^0.2.0"
 flask-apispec = "^0.11.0"
 Flask-SQLAlchemy = "^2.4.4"
 
+SQLAlchemy = "1.3.24"
 loguru = "^0.5.3"
 webargs = "^7.0.1"
 marshmallow = "^3.10.0"
