Make wps happy (#12)
* style(setup.cfg): change max line length for flake8

* style: make code formatter happy

* style: add per-file-ignores

* style: add isort to Makefile

* style: make isort happy

* style: make mypy happy

* docs: add missing docstrings

* refactor: make flake8 happy

* build(deps): add email-validator

* refactor: remove arguments from super() call

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ doctests = True
 
 accept-encodings = utf-8
 max-complexity = 6
-max-line-length = 80
+max-line-length = 100
 use_class_attributes_order_strict_mode = True
 max_function_length = 50
 max-cognitive-complexity = 8
@@ -22,7 +22,12 @@ exclude =
 
 max-imports = 17
 
-ignore = C101, D100, D104, D401, W504, RST303, RST304, DAR103, DAR203
+ignore = C101, D100, D104, D401, W504, RST303, RST304, DAR103, DAR203, WPS305
+
+per-file-ignores =
+  # These function names are part of 3d party API:
+  flask_ecom_api/api/*/*/models.py: WPS226, WPS432
+  flask_ecom_api/config.py: WPS115, WPS306
 
 
 [isort]
