--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ ignore = C101, D100, D104, D401, W504, RST303, RST304, DAR103, DAR203, WPS305
 per-file-ignores =
   # These function names are part of 3d party API:
   flask_ecom_api/api/*/*/models.py: WPS226, WPS432
+  flask_ecom_api/api/*/*/schemas.py: WPS306, D106
   flask_ecom_api/config.py: WPS115, WPS306
 
 
