--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ license = "MIT"
 python = "^3.8"
 
 Flask = "^1.1.2"
-flask-apispec = "^0.11.0"
 Flask-SQLAlchemy = "^2.4.4"
 
 SQLAlchemy = "1.3.24"
@@ -26,6 +25,7 @@ email-validator = "^1.1.2"
 flask-marshmallow = "^0.14.0"
 marshmallow-sqlalchemy = "^0.24.2"
 simplejson = "^3.17.2"
+apispec = "^4.4.0"
 
 
 [tool.poetry.dev-dependencies]
