--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ email-validator = "^1.1.2"
 flask-marshmallow = "^0.14.0"
 marshmallow-sqlalchemy = "^0.24.2"
 simplejson = "^3.17.2"
+Flask-JWT-Extended = "^4.1.0"
 
 
 [tool.poetry.dev-dependencies]
